--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
 	"repository": {},
 	"license": "UNLICENSED",
 	"dependencies": {
-		"@foobar404/wave": "^1.2.7",
-		"@remotion/bundler": "^2.3.2",
-		"@remotion/cli": "^2.3.2",
-		"@remotion/eslint-config": "^2.3.2",
-		"@remotion/renderer": "^2.3.2",
+		"@remotion/bundler": "^3.0.0",
+		"@remotion/cli": "^3.0.0",
+		"@remotion/eslint-config": "^3.0.0",
+		"@remotion/gif": "^3.0.0",
+		"@remotion/media-utils": "^3.0.0",
+		"@remotion/renderer": "^3.0.0",
+		"@types/lodash": "^4.14.168",
+		"@types/react": "^18.0.6",
+		"@types/styled-components": "^5.1.9",
 		"colorthief": "^2.3.2",
-		"eslint": "^7.15.0",
-		"express": "^4.17.1",
-		"node-vibrant": "*",
-		"prettier": "^2.2.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"remotion": "^2.3.2",
-		"rgbaster": "^2.1.1"
+		"express": "^4.18.1",
+		"hack-font": "^3.3.0",
+		"lodash": "^4.17.21",
+		"prettier-plugin-organize-imports": "^1.1.1",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"remotion": "^3.0.0"
 	}
 }
