--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@remotion/media-utils": "^3.0.0",
 		"@remotion/renderer": "^3.0.0",
 		"express": "^4.18.1",
+		"node-telegram-bot-api": "^0.57.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"remotion": "^3.0.0"
